[metadata]
name = imageprocess
version = attr: imageprocess.__version__
author = Elliott Polzin
author_email = elliott.polzin3@gmail.com
description = Image processing package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/polzin-3/image-processing
project_urls =
    Bug Tracker = https://github.com/polzin-3/image-processing/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.23.4
    opencv-python-headless>=4.7.0.72

[options.extras_require]
test =
    pytest>=7.2.0
    pytest-randomly
    pytest-mock
dev =
    pre-commit>=2.11.0
    jupyter>=1.0.0
    matplotlib>=3.7.1

[flake8]
max-line-length = 88
max-complexity = 10
select = B,C,E,F,W,B950
ignore = E203,E501,W503
exclude =
    .git,
    __pycache__,
    docs,
    build,
    dist,
    venv

[pydocstyle]
convention = numpy
add-ignore = D100,D104,D105,D203,D405

[isort]
profile = black
; UPDATE `src_paths` for your package
src_paths = imageprocess
skip = docs,build,examples,resources,venv